# azdoh

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: azdoh.py  shell.py
src/azdoh/: azdoh_logging.py  context.py  main.py
src/azdoh/common/: text.py
src/azdoh/filesystem/: tmp.py
src/azdoh/handler/task/bash3/: handler.py
src/azdoh/handler/task/bash3/job/: python3_named_arguments.py  python3_script_sanitycheck.py  shellcheck.py
src/azdoh/handler/template/: handler.py
src/azdoh/handler/template/job/: assert_template_parameters.py
src/common/: text.py
src/filesystem/: files.py  tmp.py
src/handler/task/bash3/: handler.py
src/handler/task/bash3/job/: python3_named_arguments.py  python3_script_sanitycheck.py  shellcheck.py
test/: test_bash_python.py  test_bash_shellcheck.py  test_main.py  test_template_check.py
test/example_project/azdo/tasks/bash3/python-in-bash/: happy-flow.yml  non-existing-file.yml  with-expr-in-path.yml  with-named-args.yml  without-args.yml  without-working-directory.yml
test/example_project/azdo/tasks/bash3/shellcheck/: shellcheck.yml
test/example_project/azdo/templates/: callee-noparams.yml  callee.yml  caller-combo.yml  caller-defaults.yml  caller-happyflow.yml  caller-missing.yml  caller-noparams.yml  caller-of-noparams-with-params.yml  caller-of-noparams.yml  caller-redundant.yml  caller.yml
test/testutil/: caplog_util.py
